--- a/index.html
+++ b/index.html
@@ -1,53 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-BT">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estudando Array</title>
-</head>
-<body>
-    
-
+  </head>
+  <body>
     <script>
-        const inventors = [
-            {first: 'Albert', last: 'Eistein', year: 1879, passed: 1955},
-            {first: 'Issac', last: 'Newton', year: 1643, passed: 1727},
-            {first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642},
-            {first: 'Marie', last: 'Curie', year: 1867, passed: 1934},
-        ];
+      const inventors = [
+        { first: "Albert", last: "Eistein", year: 1879, passed: 1955 },
+        { first: "Issac", last: "Newton", year: 1643, passed: 1727 },
+        { first: "Galileo", last: "Galilei", year: 1564, passed: 1642 },
+        { first: "Marie", last: "Curie", year: 1867, passed: 1934 },
+      ];
 
-        // apresentar todos inventores nascidos em 1500
-        const wereBorn1500 = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600)
-        console.table(wereBorn1500);
+      // apresentar todos inventores nascidos em 1500
+      const wereBorn1500 = inventors.filter(
+        (inventor) => inventor.year >= 1500 && inventor.year < 1600
+      );
+      console.table(wereBorn1500);
 
-        //  apresentar o nome completo dos inventores
-        const fullName = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
-        console.table(fullName)
+      //  apresentar o nome completo dos inventores
+      const fullName = inventors.map(
+        (inventor) => `${inventor.first} ${inventor.last}`
+      );
+      console.table(fullName);
 
-        // apresentar em lista do mais velho ao mais novo inventor
-        const ordered = inventors.sort((a,b) => a.year > b.year ? 1 : -1)
-        console.table(ordered)
+      // apresentar em lista do mais velho ao mais novo inventor
+      const ordered = inventors.sort((a, b) => (a.year > b.year ? 1 : -1));
+      console.table(ordered);
 
-        // apresentar a idade de todos inventores somados
-        const totalYears = inventors.reduce((total, inventor) => {
-            return total + (inventor.passed - inventor.year)
-        }, 0)
-        console.log(totalYears);
+      // apresentar a idade de todos inventores somados
+      const totalYears = inventors.reduce((total, inventor) => {
+        return total + (inventor.passed - inventor.year);
+      }, 0);
+      console.log(totalYears);
 
+      const data = [
+        "car",
+        "car",
+        "truck",
+        "truck",
+        "bike",
+        "walk",
+        "van",
+        "bike",
+        "truck",
+        "car",
+      ];
 
-        const data = [
-            'car', 'car', 'truck', 'truck', 'bike', 'walk', 'van', 'bike', 'truck', 'car'
-        ]
+      // apresente a soma de cada um desses itens
+      const transportation = data.reduce(function (obj, item) {
+        if (!obj[item]) {
+          obj[item] = 0;
+        }
+        obj[item]++;
+        return obj;
+      }, {});
+      console.log(transportation);
 
-        // apresente a soma de cada um desses itens
-        const transportation = data.reduce(function(obj, item) {
-            if(!obj[item]) {
-                obj[item] = 0
-            }
-            obj[item]++
-            return obj
-        }, {})
-        console.log(transportation);
+      ////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+      const people = [
+        { name: "Wes", year: 1988 },
+        { name: "Kait", year: 1986 },
+        { name: "Irv", year: 1970 },
+        { name: "Lux", year: 2015 },
+      ];
+
+      const comments = [
+        { text: "Love this!", id: 523423 },
+        { text: "Super good", id: 823423 },
+        { text: "You are the best", id: 2039842 },
+        { text: "Ramen in my fav food ever", id: 123523 },
+        { text: "Nice nice!", id: 542328 },
+      ];
+
+    //   Apresentar se tem ou não alguem menor de idade
+    const is19 = people.some( person => {
+        const currentYear = new Date().getFullYear()
+        return currentYear - person.year >= 18
+    })
+    console.log(is19);
+
+    // Apresentar se TODOS são maiores de idade
+    const allAdults = people.every( person => (new Date().getFullYear()) - person.year < 19)
+    console.log({allAdults});
+
+    // Apresentar o comentário com id 823423
+    const commentId = comments.find(comment => comment.id === 823423) 
+    console.log(commentId);
+
+    // Como pegar o index com ID 823423 e remove-lo do array
+    const index = comments.findIndex(comment => comment.id === 823423)
+    comments.splice(index, 1)
+    console.table(comments);
     </script>
-</body>
+  </body>
 </html>
